# etspi-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  etspi-run.py  pyproject.toml  setup.py
etspi/: cli.py
etspi/commands/: cmd_auth.py  cmd_draft.py  cmd_file-delete.py  cmd_file-get.py  cmd_file-upload.py  cmd_image-delete.py  cmd_image-get.py  cmd_image-upload.py  cmd_listing-delete.py  cmd_listing-get-iv.py  cmd_listing-get.py  cmd_listing-update-iv.py  cmd_listing-update.py  cmd_listing.py  cmd_prop-get.py  cmd_prop-update.py  cmd_shop-find.py  cmd_shop-get.py  cmd_user.py  cmd_video-delete.py  cmd_video-get.py  cmd_video-upload.py
etspi/etsyv3/: README.md  etsy_api.py
etspi/etsyv3/models/: __init__.py  file_request.py  listing_request.py  receipt_request.py  shop_request.py
etspi/etsyv3/util/auth/: auth_helper.py
