[tool.poetry]
name = "etspi"
version = "1.0.1"
description = "CLI App to manage Etsy shop and listings."
authors = ["sov2000 <sv28k64@gmail.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/sov2000/etspi-cli"
repository = "https://github.com/sov2000/etspi-cli"
keywords = ["etsy", "api", "shop", "manager"]
classifiers = [
        "Programming Language :: Python",
        "Operating System :: POSIX",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Environment :: Console",
        "Intended Audience :: End Users/Desktop",
        "Topic :: Office/Business",
        "License :: OSI Approved :: MIT License",
        "Intended Audience :: Other Audience",
        "Environment :: Console",
        ]
exclude = ["test_files/", "etspi-run.py"]


[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
rich = "^13.9.4"
jmespath = "^1.0.1"
setuptools = "^75.6.0"
python-dotenv = "^1.0.1"
etsyv3 = {git = "https://github.com/sov2000/etsyv3.git", rev = "etspi-cli-beta"}

[tool.poetry.scripts]
etspi = 'etspi.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
