[tool.poetry]
name = "etspi"
version = "1.0.4"
description = "CLI App to manage Etsy shop and listings."
authors = ["sov2000 <sv28k64@gmail.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/sov2000/etspi-cli"
repository = "https://github.com/sov2000/etspi-cli"
keywords = ["etsy", "api", "shop", "manager"]
classifiers = [
        "Programming Language :: Python",
        "Operating System :: POSIX",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Environment :: Console",
        "Intended Audience :: End Users/Desktop",
        "Topic :: Office/Business",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Intended Audience :: Other Audience",
        "Environment :: Console",
        ]
exclude = ["test_files/", "etspi-run.py"]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
rich = "^13.9.4"
jmespath = "^1.0.1"
setuptools = "^75.6.0"
python-dotenv = "^1.0.1"
certifi = "^2024.12.14"
charset-normalizer = "^3.4.0"
idna = "^3.10"
oauthlib = "^3.2.2"
requests = "^2.32.3"
requests-oauthlib = "^2.0.0"
urllib3 = "^2.2.3"

[tool.poetry.scripts]
etspi = 'etspi.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
